--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,7 +8,7 @@
     grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
     justify-items: stretch;
-    align-items: stretch;
+    align-items: center;
 }
 
 @media screen and (max-width: 1150px) {
