--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,20 +1,22 @@
-﻿.header__lang-link {
+.header__lang-link {
+    padding: 0;
+    margin: 0 0 0 18px;
+    font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
-    text-align: right;
     text-decoration: none;
     color: #fff;
-    padding: 0;
-    margin-top: 18px;
-    margin-bottom: 6px;
+    transition: opacity 0.5s;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 560px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
-        margin-top: 14px;
-        margin-bottom: 8px;
     }
 }
