--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,14 +1,18 @@
 ﻿.photo-grid {
-    margin: 0;
-    padding: 0;
     max-width: 100%;
-    max-height: 100%;
+    margin: 0 auto;
+    padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
     justify-items: stretch;
-    align-items: center;
+}
+
+@media screen and (min-width: 1280px) {
+    .photo-grid {
+        max-width: 1184px;
+    }
 }
 
 @media screen and (max-width: 1150px) {
